--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
       <version>2.7.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>JPA_Student</finalName>
